# salesfigures

./: .gitignore  .travis.yml  README.md  azure-pipelines.yml  figure.lkshw  make documentation.bat  start repl.bat  start server.bat  start tests.bat
.github/workflows/: haskell.yml
figures/: .gitignore  ChangeLog.md  figures.cabal  package.yaml  stack.yaml
figures/app/: Main.hs
figures/src/: Common.hs  Databaseversion.hs  Evalsystem.hs  Htmlgen.hs  JSONLexer.lhs  JSONParser_solution.lhs  Lib.hs  Offers.hs  Orders.hs  ParserCombinators.lhs  Pathgetter.hs  Products.hs  PutJSON.hs  SimpleJSON.hs
figures/test/: Spec.hs  testJSONParser_solution.lhs
