name: figures
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2018 Author name here
maintainer: example@example.com
homepage: https://github.com/githubuser/figures#readme
bug-reports: https://github.com/githubuser/figures/issues
description:
    Please see the README on Github at <https://github.com/githubuser/figures#readme>
author: Author name here
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
    type: git
    location: https://github.com/githubuser/figures

library
    exposed-modules:
        Htmlgen
        JSONLexer
        JSONParser_solution
        Lib
        Offers
        Orders
        ParserCombinators
        Products
    build-depends:
        Spock >=0.11,
        base >=4.7 && <5,
        blaze-html -any,
        lens >=4.15,
        mtl -any,
        text -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Paths_figures

executable  figures-exe
    main-is: Main.hs

test-suite  figures-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        Spock >=0.11,
        base >=4.7 && <5,
        blaze-html -any,
        figures -any,
        lens >=4.15,
        mtl -any,
        text -any
    default-language: Haskell2010
    hs-source-dirs: test
    other-modules:
        Htmlgen
        Paths_figures
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
