name: figures
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2018 liam hill
maintainer: example@example.com
homepage: https://github.com/hillliam/salesfigures#readme
bug-reports: https://github.com/hillliam/salesfigures/issues
synopsis: application to display figures from collected data
description:
    Please see the README on Github at <https://github.com/hillliam/salesfigures#readme>
author: liam hill
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
    type: git
    location: https://github.com/hillliam/salesfigures

library
    exposed-modules:
        Comon
        Evalsystem
        Htmlgen
        JSONLexer
        JSONParser_solution
        Lib
        Offers
        Orders
        ParserCombinators
        Pathgetter
        Products
    build-depends:
        Spock >=0.11,
        base >=4.7,
        blaze-html -any,
        hashmap -any,
        lens >=4.15,
        mtl -any,
        pathwalk -any,
        persistent-sqlite -any,
        text -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Paths_figures

executable  figures-exe
    main-is: Main.hs

test-suite  figures-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        QuickCheck -any,
        Spock >=0.11,
        base >=4.7,
        blaze-html -any,
        figures -any,
        hashmap -any,
        lens >=4.15,
        mtl -any,
        pathwalk -any,
        persistent-sqlite -any,
        text -any
    default-language: Haskell2010
    hs-source-dirs: test
    other-modules:
        Comon
        Paths_figures
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
